--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
       <header>
        <div class="headings">
+        <img src="assets/images/lady-reading.jpg" alt="backgroud">
         <h1 class="heading">HIGHER GROUNDS ACADEMY</h1>
         <h2 class="sub-heading">QUALITY AND AFFORDABLE EDUCATION</h2>
        </div>
